--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 
 header {
   grid-area: header;
-  height: 530px;
+  height: 470px;
   margin-bottom: 30px;
 }
 
@@ -39,13 +39,18 @@ header p {
   color: transparent;
   font-weight: bold;
 }
-
+.logo {
+  height: 300px;
+  position: absolute;
+  top: 110px;
+  left: 50px;
+}
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 45px;
   color: red;
   font-weight: 800;
-  margin-top: 5px;
+  margin-top: 20px;
   margin-left: 5px;
   margin-bottom: 0;
   background-image: linear-gradient(to left, black, red);
@@ -55,14 +60,14 @@ h1 {
 
 h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   background-image: linear-gradient(red, orange);
   -webkit-background-clip: text;
   color: transparent;
   font-weight: bold;
   writing-mode: vertical-rl;
   text-orientation: mixed;
-  margin-left: 120px;
+  margin-left: 0px;
 }
 
 nav {
@@ -82,8 +87,20 @@ nav {
   margin-right: 5px;
   padding-right: 4px;
   padding-left: 4px;
-  background-color: black;
-  border-radius: 10%;
+  border: 1px solid black;
+}
+
+.nav-item1{
+  background-color: #ccbaec
+}
+.nav-item2 {
+background-color: #dab8d9
+}
+.nav-item3{
+background-color: #ffc3cd
+}
+.nav-item4 {
+background-color: #ff929f
 }
 
 main {
@@ -107,32 +124,71 @@ main {
   font-size: 30px;
 }
 
-#card {
-  margin: auto;
-  margin-bottom: 10px;
-  display: inline-block;
+.cardscene {
   width: 80%;
-  background-color: transparent;
+  height: 240px;
+  perspective: 600px;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+.card-body {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 1s;
+  transform-style: preserve-3d;
   border: 2px solid black;
-  border-radius: 10px;
-  padding: 5% 5%;
 }
 
-.card-body h5 {
-  font-size: 1.1em;
-  font-weight: bold;
+#card-face-front,
+#card-face-back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
 }
 
-.card-body p {
+#card-face-front {
+color: black;
+}
+
+#card-face-back {
+ background: black;
+ color:white;
+  transform: rotateY( 180deg );
+  padding: 0 5px 5px;
+  padding-left: 8px;
+}
+
+.card-body:hover {
+  transform: rotateY(180deg);
+}
+
+.cardimg {
+  margin-top: 15px;
+  width: 230px;
+}
+
+ h5 {
   font-size: 1em;
   font-weight: bold;
+  margin-top: 15px;
+}
+
+h5 a:link {
+  color: #f4ce95;
+}
+
+h5 a:visited {
+  color: #ff929f;
 }
 
 h4 {
   display: flex;
   justify-content: center;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
 
 .card1 {
