--- a/css/modal.css
+++ b/css/modal.css
@@ -1,28 +1,62 @@
+.overlayCard {
+  position: fixed;
+  margin: auto;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  cursor: pointer;
+  text-align: center;
+}
+
+.overlayCard .close {
+  padding-right: 6%;
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
 .modal {
-  background: white;
   border: 1px solid black;
+  background-image: url('../images/modal_istock.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 15px;
+  max-width: 480px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h6 {
   font-size: 20px;
+  margin: auto;
 }
 
 .fotoIle {
-  width: 200px;
+  width: 180px;
   border: 1px solid black;
   display: block;
   margin: auto auto;
-
+  border-radius: 10%;
+  margin-top: 5px;
 }
+
 .firstP {
+  font-size: 15px;
   margin-left: 10px;
   margin-right: 5px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid black;
 }
 
 .lastP {
   margin: 10px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bold;
   text-align: center;
 }
@@ -31,6 +65,8 @@ h6 {
   font-family: 'Advent Pro', sans-serif;
   text-align: center;
   margin-bottom: 10px;
+  margin: auto;
+  font-size: 2.3em;
 }
 
 h6 {
@@ -39,4 +75,17 @@ h6 {
   margin: auto;
   font-size: 25px;
   font-family: 'Great Vibes', sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+
+.firstP {
+  margin-right: 20px;
+  margin-left: 20px;
+ font-size: 18px;
+}
+
+.lastP {
+  font-size: 20px;
+}
 }
