--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,14 @@
 body {
   font-family: 'Advent Pro', sans-serif;
   margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .container {
-  background-image: url('../images/art.jpg');
+  background-image: url('../images/ver_istock.jpg');
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   display: grid;
   width: 100%;
   grid-template-columns: 1fr;
@@ -24,32 +26,33 @@ body {
 
 header {
   grid-area: header;
-  height: 470px;
+  height: 400px;
   margin-bottom: 30px;
 }
 
 header p {
-  font-size: 33px;
-  display: flex;
-  margin: auto;
-  margin-top: 10px;
-  justify-content: center;
+  font-size: 27px;
+  position: absolute;
+  top: 200px;
+  left: 70px;
+  padding-left: 5px;
   background-image: linear-gradient(to left, purple, blue, green, orange, red);
   -webkit-background-clip: text;
   color: transparent;
   font-weight: bold;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
+
 }
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 45px;
-  color: red;
+  width: 100vw;
+  font-size: 46px;
   font-weight: 800;
   margin-top: 20px;
   margin-left: 5px;
   margin-bottom: 0;
-  background-image: linear-gradient(to left, black, red);
+  background-image: linear-gradient(to left, black, #c4e5fc);
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -57,7 +60,7 @@ h1 {
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 40px;
-  background-image: linear-gradient(red, orange);
+  background-image: linear-gradient(#c4e5fc, #6c7dc4);
   -webkit-background-clip: text;
   color: transparent;
   font-weight: bold;
@@ -75,7 +78,7 @@ nav {
 
 .navbar a {
   font-size: 1.4em;
-  color: black;
+  color: white;
   font-family: 'Great Vibes', sans-serif;
   text-decoration: none;
   text-align: center;
@@ -83,31 +86,43 @@ nav {
   margin-right: 5px;
   padding-right: 4px;
   padding-left: 4px;
+  border-bottom: 2px solid black;
   border: 1px solid black;
+  background-color: black;
+  border-radius: 5px;
 }
 
-.nav-item1{
-  background-color: #ccbaec
-}
-.nav-item2 {
-background-color: #dab8d9
-}
-.nav-item3{
-background-color: #ffc3cd
-}
+.nav-item1,
+.nav-item2,
+.nav-item3,
 .nav-item4 {
-background-color: #ff929f
+  display: inline-block;
 }
 
-#shape {
-  position: absolute;
-  top: 130px;
-  left: 70px;
+.nav-item1:hover {
+  background-color: #ccbaec;
+  transform: scale(1.3);
+}
+
+.nav-item2:hover {
+  background-color: #dab8d9;
+  transform: scale(1.3);
+}
+
+.nav-item3:hover {
+  background-color: #ffc3cd;
+  transform: scale(1.3);
+}
+
+.nav-item4:hover {
+  background-color: #ff929f;
+  transform: scale(1.3);
 }
 
 main {
   grid-area: main;
   display: grid;
+  grid-template-rows: auto;
   grid-template-areas:
     "maintitle"
     "card1"
@@ -126,10 +141,32 @@ main {
   font-size: 30px;
 }
 
+h3 {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.tools {
+  list-style: none;
+  display: flex;
+  margin-right: 5px;
+  padding-left: 10px;
+}
+
+.js,
+.html,
+.css {
+  margin-right: 5px;
+}
+
+svg {
+  cursor: pointer;
+}
+
 .cardscene {
   width: 80%;
-  height: 240px;
-  perspective: 600px;
+  height: 250px;
+  perspective: 1000px;
   margin: auto;
   margin-bottom: 15px;
 }
@@ -140,10 +177,10 @@ main {
   position: relative;
   transition: transform 1s;
   transform-style: preserve-3d;
-  border-top: 2px solid;
+  border-top: 5px solid;
   border-left: 2px solid;
   border-right: 2px solid;
-  border-image-source: linear-gradient( black,transparent);
+  border-image-source: linear-gradient(black, transparent);
   border-image-slice: 1;
 }
 
@@ -156,13 +193,13 @@ main {
 }
 
 #card-face-front {
-color: black;
+  color: black;
 }
 
 #card-face-back {
- background: black;
- color:white;
-  transform: rotateY( 180deg );
+  background: black;
+  color: white;
+  transform: rotateY(180deg);
   padding: 0 5px 5px;
   padding-left: 8px;
 }
@@ -172,11 +209,12 @@ color: black;
 }
 
 .cardimg {
-  margin-top: 15px;
-  width: 250px;
+  padding-top: 15px;
+  margin: auto;
+  width: 100%;
 }
 
- h5 {
+h5 {
   font-size: 1em;
   font-weight: bold;
   margin-top: 15px;
@@ -195,6 +233,7 @@ h4 {
   justify-content: center;
   font-weight: bold;
   font-size: 1.4em;
+  margin-top: 15px;
 }
 
 .card1 {
@@ -262,27 +301,84 @@ footer {
   line-height: 0;
 }
 
-@media screen and (min-width: 768px) {
-  header p {
-    font-size: 50px;
-    margin-left: 150px;
-    margin-top: -230px;
+@media screen and (min-width: 375px) {
+  h1 {
+    font-size: 53px;
   }
 
+  header p {
+    font-size: 30px;
+    top: 200px;
+    left: 100px;
+  }
+}
+
+@media screen and (min-width: 420px) {
   h1 {
-    font-size: 100px;
-    margin-top: 70px;
-    margin-left: 50px;
+    font-size: 60px;
+  }
+
+  header p {
+    font-size: 35px;
+    top: 200px;
+    left: 100px;
   }
 
   h2 {
     font-size: 60px;
   }
 
+  header {
+    height: 470px;
+  }
+
+  .cardscene {
+    height: 320px;
+  }
+}
+
+@media screen and (min-width: 590px) {
+  header p {
+    font-size: 45px;
+    top: 200px;
+    left: 150px;
+  }
+
+  .cardscene {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  header {
+    height: 700px;
+  }
+
+  header p {
+    font-size: 55px;
+    top: 700px;
+    left: 90px;
+    margin-left: 150px;
+    margin-top: -230px;
+  }
+
+  h1 {
+    font-size: 90px;
+    margin-top: 60px;
+    margin-left: 60px;
+  }
+
+  h2 {
+    font-size: 70px;
+    margin-left: 60px;
+  }
+
   main {
-    margin-top: 120px;
-    grid-template-columns: 50% 50%;
+    margin-top: 20px;
+    grid-template-columns: 47% 47%;
     grid-template-areas:
+      "maintitle maintitle"
       "card1 card2"
       "card3 card4"
       "card5 card6"
@@ -290,5 +386,119 @@ footer {
 
   h4 {
     font-size: 1.5em;
+  }
+
+  .overlayCard .modal {
+    display: inherit;
+    border-radius: 10px;
+    line-height: 1;
+    margin: auto 0;
+    text-align: center;
+    min-width: 50%;
+    position: absolute;
+    left: 13%;
+    margin-left: 10%;
+    top: 13%;
+  }
+
+  .cardscene {
+    height: 290px;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    background-image: url('../images/iStock.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  header {
+    height: 750px;
+  }
+
+  h1 {
+    font-size: 130px;
+    margin-top: 80px;
+    margin-left: 80px;
+  }
+
+  h2 {
+    font-size: 80px;
+    margin-left: 80px;
+  }
+
+  header p {
+    font-size: 80px;
+    top: 800px;
+    left: 150px;
+    margin-left: 150px;
+    margin-top: -230px;
+    border: 2px solid black;
+  }
+
+  .navbar a {
+    font-size: 1.8em;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-right: 7px;
+    padding-left: 7px;
+  }
+
+.maintitle {
+  width: 100vw;
+}
+  main {
+    margin-top: 120px;
+    grid-template-columns: 31% 31% 31%;
+    grid-template-areas:
+      "maintitle maintitle maintitle"
+      "card1 card2 card3"
+      "card4 card5 card6"
+  }
+
+  h4 {
+    font-size: 30px;
+  }
+
+  .overlayCard .modal {
+    display: inherit;
+    border-radius: 10px;
+    line-height: 1;
+    margin: auto 0;
+    text-align: center;
+    min-width: 25%;
+    position: absolute;
+    left: 27.5%;
+    margin-left: 10%;
+    top: 15%;
+  }
+
+  .card-text {
+    font-size: 19px;
+  }
+}
+
+@media screen and (min-width: 1205px) {
+
+  h1 {
+    font-size: 150px;
+    margin-top: 100px;
+    margin-left: 100px;
+  }
+
+  h2 {
+    font-size: 85px;
+    margin-left: 100px;
+  }
+
+  header p {
+    font-size: 100px;
+    top: 700px;
+    left: 750px;
+    margin-left: 150px;
+    margin-top: -230px;
+    border: 2px solid black;
   }
 }
