--- a/css/media.css
+++ b/css/media.css
@@ -1,28 +1,28 @@
 @media screen and (min-width: 375px) {
   h1 {
-    font-size: 53px;
+    font-size: 3.3em;
   }
 
   header p {
-    font-size: 30px;
+    font-size: 2.2em;
     top: 200px;
-    left: 100px;
+    left: 130px;
   }
 }
 
 @media screen and (min-width: 420px) {
   h1 {
-    font-size: 60px;
+    font-size: 3.8em;
   }
 
   header p {
-    font-size: 35px;
-    top: 200px;
-    left: 100px;
+    font-size: 2.2em;
+    top: 230px;
+    left: 140px;
   }
 
   h2 {
-    font-size: 60px;
+    font-size: 3.8em;
   }
 
   header {
@@ -42,13 +42,24 @@
   .cardscene {
     height: 350px;
   }
+
+  header p {
+    font-size: 2.5em;
+    top: 200px;
+    left: 230px;
+  }
 }
 
 @media screen and (min-width: 620px) {
+  .graphic .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+
   header p {
-    font-size: 45px;
+    font-size: 3.1em;
     top: 200px;
-    left: 150px;
+    left: 280px;
   }
 
   .cardscene {
@@ -58,29 +69,32 @@
   h5 {
     font-size: 1.8em;
   }
+  .copyright {
+    font-size: 1em;
+  }
 }
 
 @media screen and (min-width: 768px) {
   header {
-    height: 700px;
+    height: 520px;
   }
 
   header p {
-    font-size: 55px;
-    top: 700px;
-    left: 90px;
+    font-size: 3.4em;
+    top: 550px;
+    left: 230px;
     margin-left: 150px;
     margin-top: -230px;
   }
 
   h1 {
-    font-size: 90px;
+    font-size: 4.4em;
     margin-top: 60px;
     margin-left: 60px;
   }
 
   h2 {
-    font-size: 70px;
+    font-size: 3.8em;
     margin-left: 60px;
   }
 
@@ -144,8 +158,33 @@
     width: 35px;
     margin: 7px;
   }
+
   .copyright {
-    font-size: 15px;
+    font-size: .9em;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  h1 {
+    font-size: 5.3em;
+    margin-top: 80px;
+    margin-left: 70px;
+  }
+
+  .graphic .letter {
+    display: inline-block;
+    line-height: .9em;
+  }
+
+  header p {
+    font-size: 3.8em;
+    top: 620px;
+    left: 300px;
+    margin-left: 150px;
+    margin-top: -230px;
+  }
+  .copyright {
+    font-size: 1em;
   }
 }
 
@@ -157,64 +196,109 @@
   }
 
   header {
-    height: 750px;
+    height: 650px;
   }
 
   h1 {
-    font-size: 130px;
+    font-size: 5.9em;
     margin-top: 80px;
-    margin-left: 80px;
+    margin-left: 70px;
+  }
+
+  .graphic .letter {
+    display: inline-block;
+    line-height: .9em;
   }
 
   h2 {
-    font-size: 80px;
-    margin-left: 80px;
+    font-size: 4.6em;
+    margin-left: 70px;
   }
 
   h3 {
-    font-size: 2em;
+    font-size: 1.8em;
   }
 
   header p {
-    font-size: 80px;
-    top: 800px;
-    left: 150px;
+    font-size: 5em;
+    top: 620px;
+    left: 300px;
     margin-left: 150px;
     margin-top: -230px;
-    border: 2px solid black;
+    transition: all 1s ease-in-out;
+    cursor: pointer;
+  }
+
+  header p:hover {
+    transform: scale(1.3);
   }
 
   .navbar a {
     font-size: 1.8em;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     padding-right: 7px;
     padding-left: 7px;
-  }
-
-  .navbar a {
     border: 1px solid black;
     background-image: linear-gradient(#ffe266, #fe8654);
+    animation: bounce 2.5s infinite;
+    -webkit-animation: bounce 2.5s infinite;
+    -moz-animation: bounce 2.5s infinite;
+    -o-animation: bounce 2.5s infinite;
+    border-radius: 5px;
   }
 
-  .nav-item1:hover {
-    background-color: #ccbaec;
-    transform: scale(1.3);
+  @-webkit-keyframes bounce {
+
+    0%,
+    100% {
+      -webkit-transform: translateY(0);
+    }
+
+    50% {
+      -webkit-transform: translateY(-10px);
+    }
   }
 
-  .nav-item2:hover {
-    background-color: #dab8d9;
-    transform: scale(1.3);
+  @-moz-keyframes bounce {
+
+    0%,
+    100% {
+      -moz-transform: translateY(0);
+    }
+
+    50% {
+      -moz-transform: translateY(-10px);
+    }
   }
 
-  .nav-item3:hover {
-    background-color: #ffc3cd;
-    transform: scale(1.3);
+  @-o-keyframes bounce {
+
+    0%,
+    100% {
+      -o-transform: translateY(0);
+    }
+
+    50% {
+      -o-transform: translateY(-10px);
+    }
   }
 
-  .nav-item4:hover {
-    background-color: #ff929f;
-    transform: scale(1.3);
+  @keyframes bounce {
+
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(-10px);
+    }
+  }
+
+  .navbar-nav a:hover {
+    color: white;
+    border: 1px solid white;
   }
 
   .maintitle {
@@ -222,7 +306,7 @@
   }
 
   main {
-    margin-top: 70px;
+    margin-top: 50px;
     grid-template-columns: 31% 31% 31%;
     grid-template-areas:
       "maintitle maintitle maintitle"
@@ -366,12 +450,15 @@
   }
 
   .copyright {
-    font-size: 15px;
+    font-size: 1em;
   }
-
 }
 
 @media screen and (min-width: 1225px) {
+  header {
+    height: 700px;
+  }
+
   h1 {
     margin-top: 80px;
     margin-left: 0px;
@@ -389,7 +476,7 @@
   }
 
   h2 {
-    font-size: 85px;
+    font-size: 5.3em;
     margin-left: 120px;
   }
 
@@ -398,12 +485,11 @@
   }
 
   header p {
-    font-size: 80px;
-    top: 750px;
-    left: 300px;
+    font-size: 5em;
+    top: 650px;
+    left: 500px;
     margin-left: 150px;
     margin-top: -230px;
-    border: 2px solid black;
   }
 
   main {
@@ -417,7 +503,7 @@
 
 @media screen and (min-width: 1500px) {
   header {
-    height: 800px;
+    height: 50em;
   }
 
   .graphic {
@@ -426,36 +512,39 @@
   }
 
   h2 {
-    font-size: 90px;
+    font-size: 5.6em;
     margin-left: 120px;
   }
 
   h5 {
     margin-right: 30px;
-    margin-left:30px;
+    margin-left: 30px;
     margin-bottom: 10px;
     font-size: 1.7em;
   }
 
   header p {
-    font-size: 90px;
-    top: 650px;
-    left: 900px;
+    font-size: 5em;
+    top: 700px;
+    left: 1000px;
     margin-left: 150px;
     margin-top: -230px;
-    border: 2px solid black;
+    transition: all 1s ease-in-out;
+  }
+
+  header p:hover {
+    transform: scale(1.5);
   }
 
   .cardscene {
     height: 390px;
   }
 
-.icons li a:hover .icon {
-  transform: rotateY(360deg);
-}
+  .icons li a:hover .icon {
+    transform: rotateY(360deg);
+  }
 
-.copyright {
-  font-size: 17px;
-}
-
+  .copyright {
+    font-size: 1.1em;
+  }
 }
