--- a/css/modal.css
+++ b/css/modal.css
@@ -33,7 +33,7 @@
 }
 
 h6 {
-  font-size: 20px;
+  font-size: .9em;
   margin: auto;
 }
 
@@ -47,16 +47,15 @@ h6 {
 }
 
 .firstP {
-  font-size: 15px;
-  margin-left: 10px;
-  margin-right: 5px;
+  font-size: .9em;
+  margin:10px;
   padding-bottom: 10px;
   border-bottom: 2px solid black;
 }
 
 .lastP {
   margin: 10px;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: bold;
   text-align: center;
 }
@@ -73,19 +72,22 @@ h6 {
   display: flex;
   justify-content: center;
   margin: auto;
-  font-size: 25px;
+  margin-bottom: 10px;
+  font-size: 1.5em;
   font-family: 'Great Vibes', sans-serif;
 }
 
 @media screen and (min-width: 768px) {
 
 .firstP {
-  margin-right: 20px;
-  margin-left: 20px;
- font-size: 18px;
+  margin-right: 30px;
+  margin-left: 30px;
+ font-size: 1.1em;
 }
 
 .lastP {
-  font-size: 20px;
+  font-size: 1.1em;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 }
