--- a/css/style.css
+++ b/css/style.css
@@ -31,22 +31,21 @@ header {
 }
 
 header p {
-  font-size: 27px;
+  font-size: 2em;
   position: absolute;
   top: 200px;
-  left: 70px;
+  left: 90px;
   padding-left: 5px;
-  background-image: linear-gradient(to left, purple, blue, green, orange, red);
+  background-image: linear-gradient(to left, purple, blue, green, yellow, red);
   -webkit-background-clip: text;
   color: transparent;
   font-weight: bold;
-  border: 1px solid black;
 }
 
 h1 {
   font-family: 'Montserrat', sans-serif;
   width: 100vw;
-  font-size: 46px;
+  font-size: 2.8em;
   font-weight: 800;
   margin-top: 20px;
   margin-left: 10px;
@@ -58,7 +57,7 @@ h1 {
 
 h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 40px;
+  font-size: 2.5em;
   background-image: linear-gradient(#c4e5fc, #6c7dc4);
   -webkit-background-clip: text;
   color: transparent;
@@ -90,6 +89,47 @@ nav {
   border-bottom: 2px solid black;
   border: 1px solid black;
   background-image: linear-gradient(#c4e5fc, #6c7dc4);
+  animation: bounce 2.5s infinite;
+  -webkit-animation: bounce 2.5s infinite;
+  -moz-animation: bounce 2.5s infinite;
+  -o-animation: bounce 2.5s infinite;
+}
+
+  @-webkit-keyframes bounce {
+  0%,
+  100% {
+     -webkit-transform: translateY(0);
+  }
+  50% {
+      -webkit-transform: translateY(-10px);
+  }
+}
+@-moz-keyframes bounce {
+  0%,
+  100% {
+     -moz-transform: translateY(0);
+  }
+  50% {
+     -moz-transform: translateY(-10px);
+  }
+}
+@-o-keyframes bounce {
+  0%,
+  100% {
+     -o-transform: translateY(0);
+  }
+  50% {
+     -o-transform: translateY(-10px);
+  }
+}
+@keyframes bounce {
+  0%,
+  100% {
+      transform: translateY(0);
+  }
+  50% {
+      transform: translateY(-10px);
+  }
 }
 
 .nav-item1,
@@ -118,7 +158,7 @@ main {
   display: flex;
   justify-content: center;
   margin-top: 0px;
-  font-size: 30px;
+  font-size: 1.8em;
 }
 
 h3 {
@@ -229,10 +269,8 @@ h3 {
   background-color: transparent;
   color: black;
   border-top: 5px solid;
-  border-left: 2px solid;
-  border-right: 2px solid;
-  border-image-source: linear-gradient(black, transparent);
-  border-image-slice: 1;
+  border-right: 1px solid;
+  border-left: 1px solid;
 }
 
 .cardscene .card-body #card-face-back {
@@ -323,6 +361,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 13px;
+  font-size: .9em;
   line-height: 0;
+  margin-bottom: 10px;
 }
