--- a/css/media.css
+++ b/css/media.css
@@ -8,6 +8,18 @@
     top: 200px;
     left: 130px;
   }
+
+  .cardimg {
+    padding-top: 30px;
+  }
+
+  h5 {
+    font-size: 1.3em;
+  }
+
+  .cardscene {
+    height: 310px;
+  }
 }
 
 @media screen and (min-width: 420px) {
@@ -30,7 +42,7 @@
   }
 
   .cardscene {
-    height: 300px;
+    height: 330px;
   }
 
   h5 {
@@ -40,7 +52,7 @@
 
 @media screen and (min-width: 500px) {
   .cardscene {
-    height: 350px;
+    height: 390px;
   }
 
   header p {
@@ -63,7 +75,7 @@
   }
 
   .cardscene {
-    height: 400px;
+    height: 460px;
   }
 
   h5 {
@@ -142,12 +154,17 @@
   }
 
   .cardscene {
-    height: 300px;
+    height: 320px;
   }
 
   h5 {
-    font-size: 1.5em;
+    font-size: 1.6em;
   }
+
+  .cardimg {
+    padding-top: 35px;
+  }
+
 
   .linkedin,
   .github,
@@ -183,6 +200,11 @@
     margin-left: 150px;
     margin-top: -230px;
   }
+
+  .cardscene {
+    height: 340px;
+  }
+
   .copyright {
     font-size: 1em;
   }
@@ -333,7 +355,7 @@
   }
 
   .cardscene {
-    height: 260px;
+    height: 280px;
   }
 
   footer {
@@ -497,7 +519,7 @@
   }
 
   .cardscene {
-    height: 300px;
+    height: 320px;
   }
 }
 
@@ -537,7 +559,7 @@
   }
 
   .cardscene {
-    height: 390px;
+    height: 400px;
   }
 
   .icons li a:hover .icon {
