--- a/css/modal.css
+++ b/css/modal.css
@@ -26,6 +26,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   margin: auto;
+  margin-top: 2em;
   max-width: 300px;
   border-radius: 10px;
   font-weight: bold;
@@ -90,32 +91,29 @@ h6 {
     margin-left: 30px;
   }
 
-  .overlayCard .modal {
+  .modal {
     display: inherit;
     border-radius: 10px;
     line-height: 1;
-    margin: auto 0;
-    text-align: center;
-    max-width: 380px;
-    position: absolute;
-    left: 13%;
-    margin-left: 10%;
+    margin: auto;
+
+    margin-top: 4.5em;
+    max-width: 400px;
+
     top: 13%;
   }
 }
 
 @media screen and (min-width: 1024px) {
 
-    .overlayCard .modal {
+  .modal {
       display: inherit;
       border-radius: 10px;
       line-height: 1;
-      margin: auto 0;
-      text-align: center;
-      max-width: 380px;
-      position: absolute;
-      left: 27.5%;
-      margin-left: 10%;
+      margin: auto;
+margin-top: 6em;
+      max-width: 480px;
+
       top: 15%;
     }
 }
