--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ nav {
   padding-left: 4px;
   border-bottom: 2px solid black;
   border: 1px solid black;
-  border-radius: 10%;
+  border-radius: 5px;
   background-image: linear-gradient(#c4e5fc, #6c7dc4);
   animation: bounce 2.5s infinite;
   -webkit-animation: bounce 2.5s infinite;
