--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,18 @@
 
 body {
   font-family: 'Advent Pro', sans-serif;
+  padding: 0;
   margin: 0;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 .container {
+  display: grid;
+  width: 100%;
   background-image: url('../images/ver_istock.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  display: grid;
-  width: 100%;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-template-areas:
@@ -26,6 +27,7 @@ body {
 
 header {
   grid-area: header;
+  width: 100vw;
   height: 400px;
   margin-bottom: 30px;
 }
@@ -44,7 +46,7 @@ header p {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  width: 100vw;
+  width: 95vw;
   font-size: 2.8em;
   font-weight: 800;
   margin-top: 20px;
